--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@magic-ext/oidc": "^1.0.1",
+    "@supabase/supabase-js": "^2.10.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "magic-sdk": "^13.6.0",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
