--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@magic-ext/oidc": "^1.0.1",
+    "@supabase/auth-helpers-nextjs": "^0.5.6",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/auth-ui-react": "^0.3.5",
     "@supabase/supabase-js": "^2.10.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
